# permitd

./: Cargo.toml  ChangeLog  README.md
data/: permitd.conf  permitd.logrotate
scripts/: permitd.service  postinst
src/: main.rs
